[package]
name = "Mattress"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mattress"

[dependencies]
futures = "0.3"
form_urlencoded = "1.0"
wasmbus-rpc = "0.11"
wasmcloud-interface-httpserver = "0.8"
mattress-interfaces = { path = "../interfaces" }
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
anyhow = "1.0.70"
wasmcloud-interface-httpclient = "0.8.1"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"

